[package]
name = "imf"
authors = ["rtificr"]
description = "Utilities for processing .imf files"
keywords = ["file", "map", "array"]
repository = "https://github.com/rtificr/imf"
categories = ["data-structures", "filesystem"]
license = "GPL-2.0-or-later"
version = "0.2.7"
edition = "2021"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
fancy-regex = "0.13.0"
colors-transform = "0.2.11"