[package]
name = "imf"
authors = ["rtificr"]
description = "Utilities for processing .imf files"
keywords = ["file", "map", "array"]
repository = "https://github.com/rtificr/imf"
categories = ["data-structures", "filesystem"]
license = "GPL-2.0-or-later"
version = "0.3.2"
edition = "2021"

[dependencies]
bytebuilder = "0.1.2"